--- a/notebooks/lab_2.ipynb
+++ b/notebooks/lab_2.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-04-01T10:22:35.915911Z",
-     "end_time": "2023-04-01T10:22:37.466350Z"
+     "end_time": "2023-05-03T13:37:12.696115400Z",
+     "start_time": "2023-05-03T13:37:08.115626500Z"
     }
    },
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Get request from NBU API\n",
@@ -46,12 +46,16 @@
     "eur_url = \"https://bank.gov.ua/NBU_Exchange/exchange_site?start=20210101&end=20211231&valcode=eur&sort=exchangedate&order=asc&json\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-03T13:37:12.712113800Z",
+     "start_time": "2023-05-03T13:37:12.698115600Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Get json data from the request about US Dollar\n",
@@ -59,12 +63,16 @@
     "usd_json_df = pd.read_json(r.text)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-03T13:37:13.059411700Z",
+     "start_time": "2023-05-03T13:37:12.713115200Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Get json data from the request about Euro\n",
@@ -72,7 +80,11 @@
     "eur_json_df = pd.read_json(r.text)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-03T13:37:13.315639300Z",
+     "start_time": "2023-05-03T13:37:13.060412700Z"
+    }
    }
   },
   {
@@ -175,25 +187,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# Making Path for output csv files\n",
-    "output_path = Path(\"output/\")\n",
+    "output_path = Path(\"../output\")\n",
     "usd_path = Path(f\"{output_path}/usd_currency.csv\")\n",
     "eur_path = Path(f\"{output_path}/eur_currency.csv\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-01T10:51:32.547093Z",
-     "end_time": "2023-04-01T10:51:32.588146Z"
+     "end_time": "2023-05-03T13:42:41.227031600Z",
+     "start_time": "2023-05-03T13:42:41.205033500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Form directory if not exist\n",
@@ -205,26 +217,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "# Save USD data to csv file\n",
     "usd_json_df.to_csv(usd_path)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-03T13:42:43.148948600Z",
+     "start_time": "2023-05-03T13:42:43.109951700Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# Save EUR data to csv file\n",
     "eur_json_df.to_csv(eur_path)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-03T13:42:43.848287900Z",
+     "start_time": "2023-05-03T13:42:43.805289Z"
+    }
    }
   },
   {
