--- a/notebooks/lab_4.ipynb
+++ b/notebooks/lab_4.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-05-03T13:44:18.377722400Z",
-     "start_time": "2023-05-03T13:44:18.109486500Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -267,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Define S3 Client\n",
@@ -276,14 +272,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-03T15:00:10.366927200Z",
-     "start_time": "2023-05-03T15:00:10.162927200Z"
+     "end_time": "2023-05-03T15:24:40.830179700Z",
+     "start_time": "2023-05-03T15:24:40.483181600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Define new bucket name\n",
@@ -292,8 +288,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-03T15:00:11.042024300Z",
-     "start_time": "2023-05-03T15:00:11.031024800Z"
+     "end_time": "2023-05-03T15:24:40.841178300Z",
+     "start_time": "2023-05-03T15:24:40.827181700Z"
     }
    }
   },
@@ -584,20 +580,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deletion bucket error: An error occurred (BucketNotEmpty) when calling the DeleteBucket operation: The bucket you tried to delete is not empty\n"
+      "Bucket 'pysdkbucket' was delete successfully!\n"
      ]
     },
     {
      "data": {
-      "text/plain": "False"
+      "text/plain": "True"
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,37 +604,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-03T15:11:32.240118300Z",
-     "start_time": "2023-05-03T15:11:31.987929400Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[WinError 5] Access is denied: 'C:/Users/Who/.ssh/ec2_sdk_py_key.pem'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mPermissionError\u001B[0m                           Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[24], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Delete keypair\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[43mlab_4_key_pairs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdelete_pairs\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mD:\\.main\\code\\kpi\\itahd_labs\\src\\lab_4_key_pairs.py:26\u001B[0m, in \u001B[0;36mdelete_pairs\u001B[1;34m()\u001B[0m\n\u001B[0;32m     23\u001B[0m ec2_client \u001B[38;5;241m=\u001B[39m boto3\u001B[38;5;241m.\u001B[39mclient(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mec2\u001B[39m\u001B[38;5;124m\"\u001B[39m, region_name\u001B[38;5;241m=\u001B[39mCONFIG\u001B[38;5;241m.\u001B[39mboto\u001B[38;5;241m.\u001B[39mregion)\n\u001B[0;32m     24\u001B[0m key_pair_response \u001B[38;5;241m=\u001B[39m ec2_client\u001B[38;5;241m.\u001B[39mdelete_key_pair(KeyName\u001B[38;5;241m=\u001B[39mCONFIG\u001B[38;5;241m.\u001B[39mkey_pairs\u001B[38;5;241m.\u001B[39mname)\n\u001B[1;32m---> 26\u001B[0m \u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mremove\u001B[49m\u001B[43m(\u001B[49m\u001B[43mCONFIG\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mkey_pairs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpath\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[1;31mPermissionError\u001B[0m: [WinError 5] Access is denied: 'C:/Users/Who/.ssh/ec2_sdk_py_key.pem'"
-     ]
-    }
-   ],
-   "source": [
-    "# Delete keypair\n",
-    "lab_4_key_pairs.delete_pairs()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-03T15:11:33.823575200Z",
-     "start_time": "2023-05-03T15:11:32.835739900Z"
+     "end_time": "2023-05-03T15:24:48.428867400Z",
+     "start_time": "2023-05-03T15:24:47.716866300Z"
     }
    }
   },
@@ -646,7 +613,10 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# Delete keypair\n",
+    "lab_4_key_pairs.delete_pairs()"
+   ],
    "metadata": {
     "collapsed": false
    }
