Add some new functionality.

--- a/notebooks/lab_4.ipynb
+++ b/notebooks/lab_4.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-05-06T12:59:13.662947400Z",
+     "start_time": "2023-05-06T12:59:13.474898200Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -14,18 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Create keypair\n",
     "lab_4_key_pairs.create_pairs()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-03T13:44:19.224280400Z",
-     "start_time": "2023-05-03T13:44:18.451723200Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Define EC2 Client\n",
@@ -48,21 +48,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-03T14:48:59.104651400Z",
-     "start_time": "2023-05-03T14:48:59.093648600Z"
+     "end_time": "2023-05-06T12:59:15.165626800Z",
+     "start_time": "2023-05-06T12:59:14.806625500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Instance create successfully!!\n",
-      "with id: i-0e4bd7f123529b0bb\n"
+      "with id: i-0f55a8c8646b87ca6\n"
      ]
     }
    ],
@@ -73,8 +73,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-03T14:49:26.391624100Z",
-     "start_time": "2023-05-03T14:49:25.002688900Z"
+     "end_time": "2023-05-06T12:59:16.654727700Z",
+     "start_time": "2023-05-06T12:59:15.238624800Z"
     }
    }
   },
@@ -178,17 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Instance info:\n",
-      "\t\tid:\ti-0e4bd7f123529b0bb\n",
+      "\t\tid:\ti-0f55a8c8646b87ca6\n",
       "\t\ttype:\tt2.micro\n",
-      "\t\tpublic ip:\t18.198.50.11\n",
-      "\t\tstate:\trunning\n"
+      "\t\tcpu arch:\t['i386', 'x86_64']\n",
+      "\t\tram size:\t1024 MiB\n",
+      "\t\tdisk size:\t8 Gb\n",
+      "\t\tpublic ip:\t3.75.223.58\n",
+      "\t\tstate:\tpending\n"
      ]
     }
    ],
@@ -199,8 +202,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-03T14:57:10.431315600Z",
-     "start_time": "2023-05-03T14:57:10.347318Z"
+     "end_time": "2023-05-06T12:59:21.833740200Z",
+     "start_time": "2023-05-06T12:59:21.546357900Z"
     }
    }
   },
@@ -230,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Termination instance with id: i-0e4bd7f123529b0bb done successfully!\n"
+      "Termination instance with id: i-0f55a8c8646b87ca6 done successfully!\n"
      ]
     }
    ],
@@ -247,8 +250,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-03T14:57:43.269667400Z",
-     "start_time": "2023-05-03T14:57:42.572654200Z"
+     "end_time": "2023-05-06T13:00:05.867216100Z",
+     "start_time": "2023-05-06T13:00:04.983801200Z"
     }
    }
   },
